examples/test/testpolicy1698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1698
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key7: value49
      key20: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value39
          key38: value43
      podSelector:
        matchLabels:
          key18: value42
          key29: value49
          key31: value32
